# grpc-device

./: CMakeLists.txt
.github/workflows/: build_cmake.yml  build_nilrt.yml  build_ubuntu.yml
cmake/: CreateVirtualEnvironment.cmake  GenerateGrpcSources.cmake  GenerateServices.cmake  ImportGrpc.cmake
examples/nirfmxspecan/: spectrum-basic.py
source/codegen/: cmake_helpers.py  common_helpers.py  generate_cmake_lists.py  generate_service.py  metadata_validation.py  service_helpers.py
source/codegen/metadata/nidaqmx/: config.py
source/codegen/metadata/nidcpower/: config.py
source/codegen/metadata/nidigitalpattern/: config.py
source/codegen/metadata/nidmm/: config.py
source/codegen/metadata/nifgen/: __init__.py  config.py
source/codegen/metadata/nifpga/: config.py  functions.py
source/codegen/metadata/nirfmxnr/: enums.py  functions.py
source/codegen/metadata/niscope/: config.py
source/codegen/metadata/niswitch/: config.py
source/codegen/metadata/nisync/: config.py
source/codegen/metadata/nitclk/: config.py
source/codegen/metadata/nixnetsocket/: config.py  functions.py
source/codegen/templates/: aggregate_cmake_lists.mako  cmake_lists.mako  library_interface.h.mako  proto.mako  service_helpers.mako
source/custom/: nidaqmx_service.custom.cpp  nidcpower_service.custom.cpp  nidigitalpattern_service.custom.cpp  nidmm_service.custom.cpp  nifake_extension_service.custom.cpp  nifake_non_ivi_service.custom.cpp  nifake_service.custom.cpp  nifgen_service.custom.cpp  niscope_service.custom.cpp  niswitch_service.custom.cpp  nisync_service.custom.cpp  nitclk_service.custom.cpp  xnetsocket_converters.h
source/protobuf/: CMakeLists.txt
source/pytools/: FpgaTest.vi
source/pytools/FPGA Bitfiles/: NiFpga.c  NiFpga_FpgaTest.lvbitx
source/server/: server_configuration_parser.cpp  shared_library.cpp  shared_library.h
source/tests/system/: nidaqmx_driver_api_tests.cpp  nixnetsocket_driver_api_tests.cpp
source/tests/unit/: ni_fake_non_ivi_service_tests.cpp
